Add add_block/
